# KubernetesSubmissions-todo-src

./: Makefile  README.md
.github/workflows/: main.yaml
log_output/manifests/: kustomization.yaml
the_project/: production.txt
the_project/gke/manifests/: kustomization.yaml
the_project/manifests/: kustomization.yaml
todo_app/: Dockerfile  Makefile  README.md  main.py  pyproject.toml
todo_app/tests/: test_app.py
todo_backend/: Dockerfile  Makefile  README.md  main.py  pyproject.toml
todo_broadcaster/: Dockerfile  Makefile  README.md  main.py  pyproject.toml
